[project]
name = "comfyui-sai_api"
description = "Nodes:Stability SD3, Stability Outpainting, Stability Search and Replace, Stability Image Core, Stability Inpainting, Stability Remove Background, Stability Creative Upscale.\nAdd API key to environment variable 'SAI_API_KEY'\nAlternatively you can write your API key to file 'sai_platform_key.txt'\nYou can also use and/or override the above by entering your API key in the 'api_key_override' field of each node."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Stability-AI/ComfyUI-SAI_API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SAI_API"
Icon = ""
